[package]
name = "myelin-geometry"
description = "Basic linear and vector geometry for two-dimensional Euclidean geometry"
version = "2.4.3"
authors = [
    "Jan Nils Ferner <jan@myelin.ch>",
    "Mathias Fischler <mathias@myelin.ch>",
    "Tau Gärtli <git@tau.garden>",
    "Jeremy Stucki <jeremy@myelin.ch>",
]
repository = "https://github.com/myelin-ai/geometry"
homepage = "https://github.com/myelin-ai/geometry"
documentation = "https://docs.rs/myelin-geometry"
edition = "2018"
license = "MIT OR Apache-2.0"

[badges.maintenance]
status = "deprecated"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
itertools = "0.10"

[dev-dependencies]
nearly_eq = "0.2.4"
